<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:background="@drawable/edittext_border"
        android:gravity="center"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPhone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/des_enter_phone" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/tvDescription"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_logo" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/etPhone"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/style_button_main"
        android:text="@string/confirm"
        android:textColor="@color/white" />

</RelativeLayout>